# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: main.yml
page_analyzer/: app.py  db.py  utilities.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
