[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet 3 project - Page Analyzer"
authors = ["mishablokhin <mishablokhin@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
validators = "^0.33.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
